--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용자의 현재 위치를 기반으로 날씨나 장소정보를 제공하기 위해 필요한 권한입니다.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>사용자의 현재 위치를 기반으로 날씨나 장소정보를 제공하기 위해 필요한 권한입니다.</string>
+
 </dict>
 </plist>
